[project]
name = "backend"
version = "0.1.0"
description = "Cashew Backend Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.1",
    "bcrypt>=5.0.0",
    "click>=8.1.8",
    "cryptography>=46.0.3",
    "dnspython>=2.7.0",
    "email-validator>=2.3.0",
    "fastapi>=0.120.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = false

[dependency-groups]
dev = []
